kubernetes/apps/open-webui/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-tls-lab-winwithcherwin-com
      hosts:
        - "*.lab.winwithcherwin.com"
  rules:
    - host: chat.lab.winwithcherwin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
